<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Mac Books</string>
    <string name="hello_world">Hello world!</string>
    <string name="toast_no_google_account_selected">No Google Account Selected</string>
    <string name="toast_exception_checking_authorization">Exception checking authorization</string>
    <string name="toast_no_google_accounts_registered">No Google Accounts Registered</string>
    <string name="toast_only_one_google_account_registered">Your only registered Google account was selected</string>
    <string name="title_activity_sign_in">Sign In</string>
    <string name="action_settings">Settings</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="login_button_label">Login</string>
    <string name="signUpText">SignUp</string>
    <string name="title_activity_book_listing">Book List</string>
    <string name="title_activity_list_activity_main">MainActivity</string>
    <string name="title_activity_listing">ListingActivity</string>
    <string name="title_activity_book_detail">Book Details</string>
    <string name="title_activity_listing_activity">Book List</string>
    <string name="title_activity_list">Mac Books</string>
    <string name="title_activity_google_plus_login">Google Sign In</string>
    <string name="title_activity_add_book">Add A Book</string>
    <string name="title_activity_my_profile">My Profile</string>
    <string name="sell_book">Sell Book</string>
    <string name="my_profile">My Profile</string>
    <string name="hint">Search for book by ISBN, Title, or Author</string>
    <string name="info1">ISBN</string>
    <string name="info2">Book Title</string>
    <string name="info3">Price</string>
    <string name="addText">Add</string>
    <string name="display1">Book Title:</string>
    <string name="display2">ISBN:</string>
    <string name="display3">Price:</string>
    <string name="bookISBN">BookISBN</string>
    <string name="bookPrice">BookPrice</string>
    <string name="PurchasePrompt">Purchase</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="title_activity_font_manager">FontManagerActivity</string>
    <string name="title_activity_book_for_sale_list">Book Details</string>
    <string name="title_activity_editing">Manage Book Details</string>
    <string name="book_details">Book Details</string>
    <string name="book_author_detail">Book Author:</string>
    <string name="edit_book_title">Edit Book Title</string>
    <string name="edit_book_author">Edit Book Author</string>
    <string name="edit_book_isbn">Edit Book ISBN</string>
    <string name="your_details">Your Details</string>
    <string name="edit_book_price">Edit Book Price</string>
    <string name="search_add">Search &amp; Add</string>
    <string name="search_isbn">Search by ISBN</string>
    <string name="search_title">Search by Title</string>
    <string name="author">Author</string>
    <string name="search_author">Search By Author</string>
    <string name="your_price">Set your price</string>
    <string name="search_for_book">Search for your book</string>
    <string name="set_price">Set Price</string>
    <string name="edit_price">Edit Price</string>
    <string name="submit_edits">Submit</string>
    <string name="delete_listing">Delete Listing</string>
    <string name="my_info">My Info</string>
    <string name="name_display">Name:</string>
    <string name="email_display"> E-mail:</string>
    <string name="my_book_list">My Book List</string>
    <string name="sale_book_title">Title:</string>
    <string name="sale_book_isbn">ISBN:</string>
    <string name="sale_book_author">Author:</string>
    <string name="refresh">Refresh</string>
    <string name="sign_in">Sign In</string>
    <string name="home">Home</string>
    


</resources>