<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/winter"
    tools:context=".BookDetail" >

    <TextView
        android:id="@+id/bookTitleTag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bookTitle_Static"
        android:layout_centerHorizontal="true"
        android:text="@string/"
        android:textSize="32sp" />

    <TextView
        android:id="@+id/ISBN_static"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bookTitleTag"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:text="@string/display2"
        android:textSize="32sp" />

    <TextView
        android:id="@+id/isbn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ISBN_static"
        android:layout_centerHorizontal="true"
        android:text="@string/bookISBN"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="32sp" />

    <TextView
        android:id="@+id/price_static"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/isbn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:text="@string/display3"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="32sp" />

    <TextView
        android:id="@+id/price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/price_static"
        android:layout_centerHorizontal="true"
        android:text="@string/bookPrice"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="32sp" />

    <Button
        android:id="@+id/purchaseButton"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_below="@+id/price"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="34dp"
        android:text="@string/PurchasePrompt" 
        android:textSize="26sp" 
        android:typeface="serif"/>

    <TextView
        android:id="@+id/bookTitle_Static"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/bookTitleTag"
        android:layout_alignParentTop="true"
        android:layout_marginTop="34dp"
        android:text="@string/display1"
        android:textSize="32sp" 
        android:typeface="serif"/>

</RelativeLayout>