<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.book.system.android.appengine.EditingActivity" >

    <TextView
        android:id="@+id/book_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:gravity="center_vertical"
        android:onClick="toggle_contents"
        android:text="@string/book_details"
        android:textSize="28sp" />

    <RelativeLayout
        android:id="@+id/book_details_collapse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/book_header" >

        <LinearLayout
            android:id="@+id/book_title_fields"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layoutDirection="ltr"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/book_info_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/display1"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/book_title_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10sp"
                android:textColor="#167ABC"
                android:textSize="18sp" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/book_author_fields"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/book_title_fields"
            android:layoutDirection="ltr" >

            <TextView
                android:id="@+id/book_info_author"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/book_author_detail"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/book_author_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10sp"
                android:textColor="#167ABC"
                android:textSize="18sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/book_isbn_fields"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/book_author_fields"
            android:layoutDirection="ltr" >

            <TextView
                android:id="@+id/book_info_isbn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/display2"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/book_isbn_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10sp"
                android:textColor="#167ABC"
                android:textSize="18sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/book_price_fields"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/book_isbn_fields"
            android:layoutDirection="ltr" >

            <TextView
                android:id="@+id/book_info_priceDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/display3"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/book_price_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10sp"
                android:ems="10"
                android:enabled="false"
                android:inputType="numberDecimal" >
            </EditText>
        </RelativeLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/buttons_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/book_details_collapse"
        android:layout_below="@+id/book_details_collapse"
        android:layout_marginTop="44dp" >

        <Button
            android:id="@+id/delete_book_listing"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:background="#167ABC"
            android:fontFamily="roboto-light"
            android:text="@string/delete_listing"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/button_edit_price"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/delete_book_listing"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:background="#167ABC"
            android:fontFamily="roboto-light"
            android:text="@string/edit_price"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/button_submit_edit"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:background="#167ABC"
            android:fontFamily="roboto-light"
            android:text="@string/submit_edits"
            android:textColor="#FFFFFF" 
            android:visibility="gone"/>

    </RelativeLayout>
    

</RelativeLayout>